<resources>
    <string name="app_name">Foody</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="recipe_fragment_label">Recipes</string>
    <string name="fav_recipe_fragment_label">Favorites</string>
    <string name="joke_fragment_label">Food Joke! </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Tabs name -->
    <string name="recipes_tab_name">Recipes</string>
    <string name="fav_tab_name">Favorites</string>
    <string name="joke_tab_name">Joke!</string>
    <string name="connect_error_message">No Internet Connection.</string>

    <!-- Details Activity strings -->
    <string name="tab_overview">Overview</string>
    <string name="tab_ingredients">Ingredients</string>
    <string name="tab_instructions">Instructions</string>

    <string name="recipe_saved_message">Recipe saved</string>
    <string name="recipe_removed_message">Recipe removed from favorites</string>
    <string name="snack_bar_okay_action_message">Okay</string>
    <string name="snack_bar_all_recipe_removed_message">All recipes removed</string>

    <!-- favorite recipe adapter-->
    <string name="one_item_selected_message">%1$d item selected</string>
    <string name="more_item_selected_message">%1$d items selected</string>
    <string name="recipe_remove_counter_message">%1$d Recipe/s removed</string>

    <!-- internet connection -->
    <string name="snack_bar_no_internet_connection_message">No internet connection.</string>
    <string name="snack_bar_back_online_message">"We're back online."</string>

    <!-- chip group - bottom sheet -->
    <string name="meal_type_title">Meal Type</string>
    <string name="diet_type_title">Diet Type</string>

    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="bread">Bread</string>

    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescatarian">Pescatarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole 30</string>

    <string name="button_apply_message">Apply</string>

    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>

</resources>