<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipeFragment">

    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.apprajapati.foody.ui.fragments.recipes.RecipesFragment"
        android:label="@string/recipe_fragment_label"
        tools:layout="@layout/recipe_fragment">

        <action
            android:id="@+id/action_recipeFragment_to_recipeBottomSheet"
            app:destination="@id/recipeBottomSheet" />
        <argument
            android:name="backFromBottomSheet"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_recipeFragment_to_detailsActivity"
            app:destination="@id/detailsActivity" />
    </fragment>
    <fragment
        android:id="@+id/favRecipeFragment"
        android:name="com.apprajapati.foody.ui.fragments.favorites.FavoriteRecipesFragment"
        android:label="@string/fav_recipe_fragment_label"
        tools:layout="@layout/fav_recipe_fragment">

    </fragment>
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.apprajapati.foody.ui.fragments.foodjoke.FoodJokeFragment"
        android:label="@string/joke_fragment_label" />
    <dialog
        android:id="@+id/recipeBottomSheet"
        android:name="com.apprajapati.foody.ui.fragments.recipes.bottomsheet.RecipeBottomSheet"
        android:label="recipe_bottom_sheet"
        tools:layout="@layout/recipe_bottom_sheet" >
        <action
            android:id="@+id/action_recipeBottomSheet_to_recipeFragment"
            app:destination="@id/recipeFragment" />
    </dialog>
    <activity
        android:id="@+id/detailsActivity"
        android:name="com.apprajapati.foody.ui.DetailsActivity"
        android:label="Details"
        tools:layout="@layout/activity_details" >
        <argument android:name="recipeResult"
            app:argType="com.apprajapati.foody.models.Result" />
    </activity>
</navigation>